[EDIT] small fix on mobile ul.sort

--- a/public/css/catalog.css
+++ b/public/css/catalog.css
@@ -318,6 +318,12 @@ mobile .designer-list{
     width:110%;
     height:100%
 }
+
+mobile ul.sort{
+    padding-left:0px;
+    padding-right:0px;
+    font-size: 20px;
+}
  /*******GENERAL****************/
 
 .pagination ul{ 
